--- a/laravel/package.json
+++ b/laravel/package.json
@@ -6,12 +6,20 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.11.6",
+        "@vitejs/plugin-vue": "^5.2.1",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
+        "bootstrap": "^5.2.3",
         "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^1.0",
-        "postcss": "^8.4.47",
-        "tailwindcss": "^3.4.13",
-        "vite": "^5.0"
+        "laravel-vite-plugin": "^1.2.0",
+        "postcss": "^8.5.1",
+        "sass": "^1.56.1",
+        "tailwindcss": "^4.0.3",
+        "vite": "^5.4.14"
+    },
+    "dependencies": {
+        "@tailwindcss/postcss": "^4.0.3",
+        "@tailwindcss/postcss7-compat": "^2.2.17"
     }
 }
